FILE (
	GLOB_RECURSE fcpptfiles 
	*.cpp
)

FILE (
	GLOB_RECURSE fcpptheaders
	../include/*.hpp
)

SET (fcpptfiles ${fcpptfiles} ${fcpptheaders})

IF (ENABLE_SHARED)
	ADD_LIBRARY (fcppt SHARED ${fcpptfiles})
	SET_TARGET_PROPERTIES(fcppt PROPERTIES SOVERSION ${FCPPT_SHARED_VERSION} VERSION ${FCPPT_SHARED_VERSION})
	IF (NOT MSVC)
		TARGET_LINK_LIBRARIES (
			fcppt
			${Boost_LIBRARIES}
		)
	ENDIF ()
	INSTALL (TARGETS fcppt DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
ENDIF()

IF (ENABLE_STATIC)
	ADD_LIBRARY (fcppt_static STATIC ${fcpptfiles})
	SET_TARGET_PROPERTIES(fcppt_static PROPERTIES VERSION ${FCPPT_SHARED_VERSION} OUTPUT_NAME fcppt)
	IF (NOT MSVC)
		TARGET_LINK_LIBRARIES (
			fcppt_static
			${Boost_LIBRARIES}
		)
	ENDIF ()
	INSTALL (TARGETS fcppt_static DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
ENDIF()

