FILE (
	GLOB_RECURSE fcpptfiles 
	*.cpp
)

FILE (
	GLOB_RECURSE fcpptheaders
	../include/*.hpp
)

SET (fcpptfiles ${fcpptfiles} ${fcpptheaders})

MACRO(MAKE_FCPPT_LIBRARY TARGETNAME VARIANT)
	ADD_LIBRARY (${TARGETNAME} ${VARIANT} ${fcpptfiles})

	SET_TARGET_PROPERTIES(${TARGETNAME} PROPERTIES VERSION ${FCPPT_VERSION})

	IF(${TARGETNAME} STREQUAL fcppt)
		SET_TARGET_PROPERTIES(
			${TARGETNAME} PROPERTIES SOVERSION ${FCPPT_SHARED_VERSION}
		)
	ENDIF()

	#rename fcppt_static into fcppt for UNIX
	IF(${TARGETNAME} STREQUAL fcppt_static AND UNIX)
		SET_TARGET_PROPERTIES(
			${TARGETNAME} PROPERTIES OUTPUT_NAME fcppt
		)
	ENDIF()

	IF (NOT MSVC)
		TARGET_LINK_LIBRARIES (
			${TARGETNAME}
			${Boost_LIBRARIES}
		)
	ENDIF ()

	IF(FCPPT_HAVE_CLOCK_GETTIME)
		TARGET_LINK_LIBRARIES(${TARGETNAME} rt)
	ENDIF()

	INSTALL (TARGETS ${TARGETNAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
ENDMACRO()

IF (ENABLE_SHARED)
	MAKE_FCPPT_LIBRARY(fcppt SHARED)
ENDIF()

IF (ENABLE_STATIC)
	MAKE_FCPPT_LIBRARY(fcppt_static STATIC)
ENDIF()

